tests/instantiating/invalid/invalid_property/bus.fbd
type t_conf config

main bus

	foo t_conf
		adf = 1203
